SyntacticAnalyzer/tests/success/clase_metodo_sentencia_asignacion.java
class A {
	dynamic boolean methodb1 (Objeto o1, Objeto o2)
		var String s1, s2;
	{
		id1 = new Object(this, true, 1, 'a', "una cadena");
	}
}
