SyntacticAnalyzer/tests/fail/sentenciasimple-expresion05.java
class foo {
	ctor(int n1)
	var int n2;
	{	
		// llamada mal formada
		( objeto (('a',"cadena",1));
	}
}
